Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-01-10 Kimmo
 PATCH: [ 1631796 ] Use PCRE for filemask filtering
  Src: DiffWrapper.cpp DirDoc.h FileFilterHelper.cpp FileFilterHelper.h Merge.cpp
   Merge.dsp Ucs2Utf8.cpp Ucs2Utf8.h
  Src/Common removed files: Regexp.cpp RegExp.h

2007-01-10 Takashi
 BUG: [ 1631613 ] WinMerge crashes when editing code files
  Src/editlib: ccrystaleditview.cpp

2007-01-10 Takashi
 BUG: [ 1630630 ] Unexpected selection of text after changing pane
  Src: MergeEditView.cpp

2007-01-10 Gal
 PATCH: [ 1597814 ] 'Wrap Lines' + 'Next Diff' Bug (3)
  Src: MergeEditView.cpp MergeEditView.h

2007-01-10 Gal
 PATCH: [ 1631215 ] Remove used files
  Src: Merge.dsp
  Src/Common deleted: listvwex.cpp listvwex.h

2007-01-08 Kimmo
 PATCH: [ 1593810 ] Line-filtering post compare
  Src: DiffWrapper.cpp DiffWrapper.h MainFrm.cpp MainFrm.h Merge.dsp MergeDoc.cpp
  Src new files: FilterList.cpp FilterList.h

2007-01-08 Gal
 BUG: [ 1597939 ] Rename Edits Wrong Field in Folder Compare List
  Src: DirView.cpp

2007-01-07 Kimmo
 BUG: [ 1567749 ] "Unable to compare files" needs short result
  Src: DirViewColItems.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-01-06 Kimmo
 TODO: [ 1489875 ] Mimimum height for location pane visible area indicator
  Src: LocationView.cpp
 TODO: [ 1485038 ] Rename DIFFITEM::IsSideLeft() and IsSideRight()
  Src: CompareStats.cpp DiffContext.cpp DiffFileData.cpp DiffItem.cpp DiffItem.h
   DirActions.cpp DirDoc.cpp DirScan.cpp DirView.cpp DirViewColHandler.cpp
   DirViewColItems.cpp
 PATCH: [ 1567773 ] Change "Only in xxxxxxxxxx" to "Right Only: xxxxxxxxxx"
  Src: DirViewColItems.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc
 ConvertFilter() function in FileOrFolderSelect can be a static function
  Src: FileOrFolderSelect.cpp FileOrFolderSelect.h

2007-01-05 Kimmo
 PATCH: [ 1628203 ] Reduce options caching in MergeEditView